predicate: match iterable elements when possible

this most notably ensures backwards compatibility where `foo=='bar'`
with foo being a QStringList and bar being a QString matching
implicitly.

make this behavior explicit.

fixes kio predicates no longer matching mtp devices in kf6

BUG: 478285